Reenable autohiding of inline message

This change commented the lines, hence the inline message never hides:
https://invent.kde.org/graphics/spectacle/-/commit/9658891adf8275ac69d874e8753b92dd20060618#c59784b9993edc6ebf92ca55c1465735a8cca131_234_241

also: don't hide for all kind of messages. Keep for saved screenshots, until next
screenshot has been taken

BUG: 456100